Fixing quickbuy popup text overlapping [APPBUG-258]
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@14018 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/quickbuy.css
+++ b/projects/Media/docroot/assets/css/quickbuy.css
@@ -3,6 +3,10 @@
 	width: 410px;
 }
 
+.qbContainer {
+  overflow: hidden;
+}
+
 .qbLaunchButton {
 	border: 0;
 	width: 103px;
@@ -150,7 +154,7 @@
 
 .qbBody .left {
 	float:left;
-	margin:10px;
+	margin: 10px 10px 0;
 	_margin:5px;
 	width:180px;
 	text-align: right;
